--- a/package.json
+++ b/package.json
@@ -8,23 +8,19 @@
   "license": "MIT",
   "scripts": {
     "serve": "live-server public/",
-    "webpack": "webpack",
-    "dev-server": "webpack-dev-server",
-    "build": "react-scripts build",
-    "start": "react-scripts start",
-    "predeploy": "npm run build",
-+   "deploy": "gh-pages -d build"
+    "build": "webpack",
+    "dev-server": "webpack-dev-server"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
-    "babel-cli": "6.24.1",
-    "babel-core": "6.25.0",
-    "babel-loader": "7.1.1",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-env": "1.5.2",
-    "babel-preset-react": "6.24.1",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "css-loader": "0.28.4",
     "gh-pages": "^2.2.0",
     "live-server": "^1.2.1",
@@ -33,12 +29,12 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-modal": "2.2.2",
-    "react-scripts": "^3.3.0",
     "sass-loader": "6.0.6",
     "style-loader": "^0.18.2",
-    "svg-inline-loader": "^0.8.0",
-    "validator": "^12.1.0",
-    "webpack": "3.1.0",
+    "webpack": "^4.41.5",
     "webpack-dev-server": "2.5.1"
+  },
+  "devDependencies": {
+    "webpack-cli": "^3.3.10"
   }
 }
